# authnative-emu

./: .gitignore  CMakeLists.txt  README.md
include/authnative/: constants.h  crypto.h  utils.h
src/: core.cpp  main.cpp
